Fixed backtab unindent on blank space before content